--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Montserrat:300,400,600,700,800,900" rel="stylesheet">
   <link rel="stylesheet" href="css/page-style.css">
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.ui.min.js"></script>
@@ -35,7 +37,7 @@
         <li class="home "><a href="#home">home</a></li>
         <li class="work "><a href="#work">work</a></li>
         <li class="say-hello "><a href="#contact">contact</a></li>
-        <li class="resume-page"><a href="file:///Users/jo/portfolio/page/resume-page.html">résumé</a></li>
+        <li class="resume-page"><a href="/resume-page.html">résumé</a></li>
       </div>
     </div>
 
@@ -158,7 +160,7 @@
           </h4>
         </div>
         <div class="row links">
-          <a class ="button heading-font" href="file:///Users/jo/portfolio/page/resume-page.html">résumé</a>
+          <a class ="button heading-font" href="/resume-page.html">résumé</a>
           <a class="button heading-font" href="mailto:joanitha.gomez@sjsu.edu">email</a>
           <a class ="button heading-font" target="github" href="https://github.com/joanithagomez">github</a>
           <a class ="button heading-font"  target="linkedin"href="https://www.linkedin.com/in/joanitha-christle-gomez">linkedin</a>
