--- a/index.html
+++ b/index.html
@@ -4,21 +4,19 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Montserrat:300,400,600,700,800,900" rel="stylesheet">
   <link rel="stylesheet" href="css/page-style.css">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.ui.min.js"></script>
   <script type="text/javascript" src="js/page.js"></script>
+
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
+
 </head>
 
 <body>
   <div class="container">
-    <div class="navigation">
+    <div class="nav-icon">
       <svg width="48px" height="25px" viewBox="0 0 48 25" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-          <!-- Generator: Sketch 45.2 (43514) - http://www.bohemiancoding.com/sketch -->
-          <desc>Created with Sketch.</desc>
-          <defs></defs>
               <g id="Desktop-HD-Copy" transform="translate(-1341.000000, -55.000000)" stroke="#627077" stroke-width="3">
                   <g id="Group-2" transform="translate(1343.000000, 55.000000)">
                       <path d="M0,1.5 L43.9465743,1.5" id="Line1"></path>
@@ -31,154 +29,157 @@
 
     </div>
 
-
     <div class="menu-overlay">
       <div class="menu-items">
         <li class="home "><a href="#home">home</a></li>
         <li class="work "><a href="#work">work</a></li>
         <li class="say-hello "><a href="#contact">contact</a></li>
-        <li class="resume-page"><a href="/resume-page.html">résumé</a></li>
+        <li class="resume-page"><a href="file:///Users/jo/portfolio/page/resume-page.html">résumé</a></li>
+      </div>
+
+    </div>
+
+    <div class="home-page">
+      <div class="hello heading-font">hello</div>
+      <a name="home"></a>
+
+      <div class="row">
+        <div class="col-6 title-container">
+          <div class="heading-font title">joanitha</div>
+          <div class="heading-font title">christle</div>
+          <div class="heading-font title">gomez.</div>
+        </div>
+        <div class="col-6"></div>
+      </div>
+
+
+      <div class="row about-container">
+        <div class="col-6 img-container">
+          <img class="headshot" src="images/headshot.jpeg" alt="Joanitha's headshot">
+        </div>
+        <div class="col-6" "about-text-container">
+          <div class=" about-text description-font ">
+            <p>I’m an undergraduate student at San José State University pursuing my degree in <br>Computer Science.</br> After my expected graduation in the Fall of 2018, I intend to pursue a career as a <br>Front-end Developer.</br>
+            </p>
+          </div>
+        </div>
       </div>
     </div>
 
+    <a name="work "></a>
+    <div class="row work-container ">
 
-    <div class="hello heading-font">hello</div>
-    <a name="home"></a>
+      <div class="row mywork heading-font title ">i worked on</div>
 
-    <div class="col-6 title-container">
-      <h1 class="heading-font title">joanitha</h1>
-      <h1 class="heading-font title">christle</h1>
-      <h1 class="heading-font title">gomez.</h1>
-    </div>
+      <div class="number one heading-font ">01</div>
 
-
-    <div class="row about-container">
-      <div class="col-6 img-container">
-        <img class="headshot" src="images/headshot.jpeg" alt="Joanitha's headshot">
+      <div class="row work01 ">
+        <div class="col-3 "></div>
+        <div class="col-9 ">
+          <h2 class="work-title heading-font ">INFORMATION TECHNOLOGY SERVICES,</h2>
+          <h3 class="work-title work-place heading-font ">San José State University</h3>
+        </div>
       </div>
-      <div class="col-6 about-text description-font" style="color: #091A26">
-        <p>I’m an undergraduate student at San José State University pursuing my degree in <br>Computer Science.</br> After my expected graduation in the Fall of 2018, I intend to pursue a career as a <br>Front-end Developer.</br>
-        </p>
+
+      <div class="row description ">
+        <div class="col-3 "></div>
+        <div class="col-9 ">
+          <p class="work-description ">Our goal was to help ITS redesign their <br>website by producing proposals that would <br>make the site more user-friendly. My team<br> and I conducted user-interviews, created <br>prototypes, performed usability tests and<br> submitted final
+            proposals based on our<br> research and surveys, following an agile <br>process throughout.
+          </p>
+          <p class="work-description footer ">Used: Content Management Systems<br> Role: Student Technical Ambassador</p>
+        </div>
       </div>
-    </div>
 
-    <a name="work"></a>
-    <div class="row work-container">
+      <div class="row work02 ">
+        <div class="number two heading-font ">02</div>
 
-      <h1 class="mywork heading-font title">i worked on</h1>
-
-      <div class="number one heading-font">01</div>
-
-      <div class="row work01">
-        <div class="col-3"></div>
-        <div class="col-9">
-          <h2 class="work-title heading-font">INFORMATION TECHNOLOGY SERVICES,<h2>
-                      <h3 class="work-title work-place heading-font">San José State University<h3>
-                </div>
-            </div>
-
-            <div class="row description">
-              <div class="col-3"></div>
-              <div class="col-9">
-                <p class="work-description">Our goal was to help ITS redesign their<br>website by producing proposals
-                  that would <br>make the site more user-friendly. My team<br> and I conducted user-interviews, created <br>prototypes, performed
-                  usability tests and<br> submitted final proposals based on our<br> research and surveys, following an agile <br>process throughout.
-                </p>
-                <p class="work-description footer">Used: content management systems<br>Role: Student Technical Ambassador</p>
+        <div class="col-3 "></div>
+        <div class="col-9 ">
+          <h2 class="work-title heading-font ">CALENDAR APPLICATION<h2>
+              <h3 class="work-title work-place heading-font ">Course: Object-Oriented Design<h3>
             </div>
           </div>
 
-          <div class="row work02">
-            <div class="number two heading-font">02</div>
+          <div class="row description ">
+            <div class="col-3 "></div>
+            <div class="col-9 ">
+              <p class="work-description ">As a part of my course, I designed and<br> implemented a calendar that is similar to<br> Google Calendar.
 
-            <div class="col-3"></div>
-            <div class="col-9">
-              <h2 class="work-title heading-font">CALENDAR APPLICATION<h2>
-              <h3 class="work-title work-place heading-font">Course: Object-Oriented Design<h3>
-            </div>
-          </div>
-
-          <div class="row description">
-            <div class="col-3"></div>
-            <div class="col-9">
-              <p class="work-description">Designed and implemented a calendar<br>similar to Google Calendar.
               </p>
-              <p class="footer work-description">Used: Model-View-Controller pattern,<br> GUI programming skills and Java</p>
+              <p class="footer work-description ">Used: Model-View-Controller pattern, GUI<br>  programming skills and Java</p>
             </div>
           </div>
 
-          <div class="row work03">
+          <div class="row work03 ">
 
-            <div class="number three heading-font">03</div>
-            <div class="col-3"></div>
-            <div class="col-9">
-              <h2 class="work-title heading-font">ONE-MINUTE TIMER<h2>
-              <h3 class="work-title work-place heading-font">(Self-study)<h3>
+            <div class="number three heading-font ">03</div>
+            <div class="col-3 "></div>
+            <div class="col-9 ">
+              <h2 class="work-title heading-font ">ONE-MINUTE TIMER<h2>
+              <h3 class="work-title work-place heading-font ">(Self-study)<h3>
             </div>
           </div>
 
-          <div class="row description">
-            <div class="col-3"></div>
-            <div class="col-9">
-              <p class="work-description">	Designed and implemented a 1-minute timer<br> as a side-project to learn HTML/CSS and JavaScript, <br>using Codepen.
+          <div class="row description ">
+            <div class="col-3 "></div>
+            <div class="col-9 ">
+              <p class="work-description"> I designed and implemented a 1-minute timer<br> as a side-project to learn HTML/CSS and JavaScript, <br>using Codepen.
               </p>
-              <p class="footer work-description">Used: jQuery, AJAX and Firebase (back-end).</p>
+              <p class="footer work-description ">Used: jQuery, AJAX and Firebase (back-end).</p>
             </div>
           </div>
 
-          <div class="row work04">
+          <div class="row work04 ">
 
-            <div class="number four heading-font">04</div>
-            <div class="col-3"></div>
-            <div class="col-9">
-              <h2 class="work-title heading-font">MANCALA GAME<h2>
-              <h3 class="work-title work-place heading-font">Course: Object-Oriented Design<h3>
+            <div class="number four heading-font ">04</div>
+            <div class="col-3 "></div>
+            <div class="col-9 ">
+              <h2 class="work-title heading-font ">MANCALA GAME<h2>
+              <h3 class="work-title work-place heading-font ">Course: Object-Oriented Design<h3>
             </div>
           </div>
 
-          <div class="row description">
-            <div class="col-3"></div>
-            <div class="col-9">
-              <p class="work-description"> Collaborated with a team of 3 to design and<br> implement Mancala board game in Java Swing.<br>
-                I focused on the model component of Model-<br>View-Controller pattern.
+          <div class="row description ">
+            <div class="col-3 "></div>
+            <div class="col-9 ">
+              <p class="work-description ">I collaborated with a team of 3 to design and<br> implement Mancala board game in Java Swing.<br>
+                I focused mainly on the model component of <br>Model-View-Controller pattern.
               </p>
-              <p class="footer work-description">Used: Model-View-Controller pattern,<br> GUI programming skills and Java</p>
+              <p class="footer work-description ">Used: Model-View-Controller pattern,<br> GUI programming skills and Java</p>
             </div>
           </div>
-
         </div>
 
-        <a name="contact"></a>
-        <div class="contact-page">
-        <div class="row contact-title">
-          <h1 class="contact heading-font title">say hello</h1>
+        <a name="contact "></a>
+        <div class="contact-page ">
+        <div class="row contact-title ">
+          <div class="contact heading-font title ">say hello</div>
         </div>
 
-        <div class="row">
-          <h4 class="contact-description heading-font">I’m looking for an internship I can put my best into. If you have a project I can work on,
+        <div class="row ">
+          <h4 class="contact-description heading-font ">I’m looking for an internship I can put my best into. If you have a project I can work on,
             please feel free to contact me!</p>
           </h4>
         </div>
-        <div class="row links">
-          <a class ="button heading-font" href="/resume-page.html">résumé</a>
-          <a class="button heading-font" href="mailto:joanitha.gomez@sjsu.edu">email</a>
-          <a class ="button heading-font" target="github" href="https://github.com/joanithagomez">github</a>
-          <a class ="button heading-font"  target="linkedin"href="https://www.linkedin.com/in/joanitha-christle-gomez">linkedin</a>
+        <div class="row links ">
+          <a class =" heading-font " href="file:///Users/jo/portfolio/page/resume-page.html ">résumé</a>
+          <a class=" heading-font " href="mailto:joanitha.gomez@sjsu.edu ">email</a>
+          <a class =" heading-font " target="github " href="https://github.com/joanithagomez ">github</a>
+          <a class =" heading-font "  target="linkedin " href="https://www.linkedin.com/in/joanitha-christle-gomez ">linkedin</a>
 
 
-      <!-- <a href="#" class="email-link">email</a>
-          <a href="#" class="github">github</a>
-          <a href="#" class="linkedin">linkedin</a>
-          <a href="#" class="instagram">instagram</a> -->
+      <!-- <a href="# " class="email-link ">email</a>
+          <a href="# " class="github ">github</a>
+          <a href="# " class="linkedin ">linkedin</a>
+          <a href="# " class="instagram ">instagram</a> -->
         </div>
 
-
-      <div class="page-footer-container">
-        <h4 class="name">JOANITHA C GOMEZ</h4>
-        <h4 class="made-by">made by joanitha.</h4>
-        <h4 class="email">joanitha.gomez@sjsu.edu</h4>
       </div>
-    </div>
+
+      <div class="page-footer-container ">
+        <h4 class="made-by ">made by joanitha</h4>
+      </div>
 
 </div>
 </body>
