--- a/resume-page.html
+++ b/resume-page.html
@@ -15,11 +15,8 @@
 <body>
   <div class="container">
 
-    <div class="navigation">
+    <div class="nav-icon">
       <svg width="48px" height="25px" viewBox="0 0 48 25" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-          <!-- Generator: Sketch 45.2 (43514) - http://www.bohemiancoding.com/sketch -->
-          <desc>Created with Sketch.</desc>
-          <defs></defs>
               <g id="Desktop-HD-Copy" transform="translate(-1341.000000, -55.000000)" stroke="#627077" stroke-width="3">
                   <g id="Group-2" transform="translate(1343.000000, 55.000000)">
                       <path d="M0,1.5 L43.9465743,1.5" id="Line1"></path>
@@ -37,139 +34,148 @@
         <li class="home"><a href="file:///Users/jo/portfolio/page/mypage.html#home">home</a></li>
         <li class="work"><a href="file:///Users/jo/portfolio/page/mypage.html#work">work</a></li>
         <li class="say-hello"><a href="file:///Users/jo/portfolio/page/mypage.html#contact">contact</a></li>
-        <li class="resume-page"><a href="#">résumé</a></li>
       </div>
     </div>
 
     <div class="row title-banner">
-      <!--  <div class="col-3">
-        <div class="headshot-container">
-          <img class="headshot-resume" src="images/headshot.jpeg" alt="Joanitha's headshot">
-        </div>
-      </div> -->
-      <div class="col-12 heading-container">
+      <div class="col-5 headshot-container">
+        <img class="headshot-resume" src="images/headshot.jpeg" alt="Joanitha's headshot">
+      </div>
+      <div class="col-9 heading-container">
 
         <div class="heading-text-container">
-          <h1 class="resume-heading heading-font">JOANITHA CHRISTLE GOMEZ</h1>
-        </div>
-      </div>
-    </div>
-
-    <div class="row section-container">
-      <div class="section-header-container col-4">
-        <div class="section-heading">OBJECTIVE</div>
-      </div>
-      <div class="section-content-container col-8">
-        <div class="section-text">Computer Science major seeking front-end developer internship.
+          <h1 class="resume-heading heading-font">JOANITHA</h1>
+          <h1 class="resume-heading heading-font">CHRISTLE</h1>
+          <h1 class="resume-heading heading-font">GOMEZ</h1>
         </div>
       </div>
     </div>
 
 
-    <div class="row section-container">
-      <div class="section-header-container col-4">
-        <div class="section-heading">EDUCATION</div>
-      </div>
-      <div class="section-content-container col-8">
-        <div class="section-text">B.S in Computer Science; Expected Fall 2018<br> San José State University, CA<br>GPA: 3.5/ 4.0
+    <div class="sub-container">
+      <div class="row section-container">
+        <div class="section-header-container col-4">
+          <div class="section-heading">OBJECTIVE</div>
         </div>
-        <div class="section-text" style="padding-top: 20px">Design 101,<br> Designlab, <br> June 2017
-        </div>
-      </div>
-    </div>
-
-
-    <div class="row section-container">
-      <div class="section-header-container col-4">
-        <div class="section-heading">SKILLS</div>
-      </div>
-      <div class="section-content-container col-8">
-        <div class="section-text section-subheading">Technologies:</div>
-        <div class="section-text">HTML, CSS, JavaScript, jQuery. Java, C++, Python, Firebase, Ajax. Bootstrap.</div>
-
-        <div class="section-text section-subheading">Tools:</div>
-        <div class="section-text">Sketch, GitHub, Eclipse, Codepen, Atom, Slack, Trello.
-        </div>
-      </div>
-    </div>
-
-
-
-    <div class="row section-container">
-      <div class="section-header-container col-4">
-        <div class="section-heading">COURSEWORK</div>
-      </div>
-      <div class="section-content-container col-8">
-        <div class="section-text">Data Structures and Algorithms<br>Object-Oriented Design<br>Introduction to x86 Processor Assembly Language & Computer Architecture and<br>Discrete Mathematics
-        </div>
-      </div>
-    </div>
-
-
-
-    <div class="row section-container ">
-      <div class="section-header-container col-4 ">
-        <div class="section-heading ">PROJECTS</div>
-      </div>
-      <div class="section-content-container col-8 ">
-        <div class="section-text">
-          <h1 class="section-subheading">TIMER <span class="h4-size">(self-study) | June 2017 </span></h1>
-          <div class="description">
-            Designed and implemented a 1-minute timer as a side-project to learn HTML/CSS and JavaScript, using Codepen. Used jQuery, AJAX and Firebase as backend.
-          </div>
-        </div>
-
-        <div class="section-text">
-          <h1 class="section-subheading">CALENDAR APPLICATION <span class="h4-size">(CS 151: Object-Oriented Design) | April 2017</span></h1>
-          <div class="description">
-            Designed and implemented a calendar similar to Google Calendar. Used Model-View-Controller design pattern, Java Swing and GUI programming skills.
-          </div>
-        </div>
-
-        <div class="section-text">
-          <h1 class="section-subheading">MANCALA GAME <span class="h4-size">(CS 151: Object-Oriented Design)	| April 2017</span></h1>
-          <div class="description">
-            Collaborated with a team of 3 to design and implement Mancala board game in Java Swing. Focused on the model component of Model-View-Controller pattern.
+        <div class="section-content-container col-8">
+          <div class="section-text">Computer Science major seeking front-end developer internship.
           </div>
         </div>
       </div>
-    </div>
 
 
-
-    <div class="row section-container ">
-      <div class="section-header-container col-4 ">
-        <div class="section-heading ">EXPERIENCE</div>
-      </div>
-      <div class=" section-content-container col-8 ">
-        <div class="section-text">
-          <h1 class="section-subheading">STUDENT TECHNICAL AMBASSADOR<span class="h4-size"> | August 2016<span></h1>
-          <h2 class="place">Information Technology Services, San José State University</h2>
+      <div class="row section-container">
+        <div class="section-header-container col-4">
+          <div class="section-heading">EDUCATION</div>
         </div>
-        <div class="section-text description" style="padding-top: 20px">
-          Worked with a team of 3 to help redesign the Information Services Technology website. Conducted user interviews, created prototypes, performed usability tests and submitted proposals for an improved design based on surveys and research. Successfully completed,
-          following an agile process, taking up leadership in 2 out of 5 sprints.
+        <div class="section-content-container col-8">
+          <div class="section-text">B.S in Computer Science; Expected Fall 2018<br> San José State University, CA<br>GPA: 3.5/ 4.0
+          </div>
+          <div class="section-text" style="padding-top: 20px">Design 101,<br> Designlab, <br> June 2017
+          </div>
         </div>
       </div>
-    </div>
 
 
+      <div class="row section-container">
+        <div class="section-header-container col-4">
+          <div class="section-heading">SKILLS</div>
+        </div>
+        <div class="section-content-container col-8">
+          <div class="section-text section-subheading">Technologies:</div>
+          <div class="section-text">HTML, CSS, JavaScript, jQuery. Java, C++, Python, Firebase, Ajax. Bootstrap.</div>
 
-    <div class="row section-container">
-      <div class="section-header-container col-4">
-        <div class="section-heading">ACCOMPLISHMENTS</div>
-      </div>
-      <div class="section-content-container col-8">
-        <div class="section-text">
-          Self-learned HTML/CSS, JavaScript, jQuery, AJAX, Python.<br>Won the Employer’s choice award for working with a team to help Information Technology Services (SJSU) redesign their website.
+          <div class="section-text section-subheading">Tools:</div>
+          <div class="section-text">Sketch, GitHub, Eclipse, Codepen, Atom, Slack, Trello.
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="row footer">
-      <div class="section-text"> | <a href="#">joanitha.gomez@sjsu.edu</a> | <a href="https://www.linkedin.com/in/joanitha-christle-gomez">https://www.linkedin.com/in/joanitha-christle-gomez</a> | </div>
-    </div>
 
+
+      <div class="row section-container">
+        <div class="section-header-container col-4">
+          <div class="section-heading">COURSEWORK</div>
+        </div>
+        <div class="section-content-container col-8">
+          <div class="section-text">Data Structures and Algorithms<br>Object-Oriented Design<br>Introduction to x86 Processor Assembly Language & Computer Architecture and<br>Discrete Mathematics
+          </div>
+        </div>
+      </div>
+
+
+
+      <div class="row section-container ">
+        <div class="section-header-container col-4 ">
+          <div class="section-heading ">PROJECTS</div>
+        </div>
+        <div class="section-content-container col-8 ">
+          <div class="section-text">
+            <h1 class="section-subheading">TIMER <span class="h4-size">(self-study) | June 2017 </span></h1>
+            <div class="description">
+              Designed and implemented a 1-minute timer as a side-project to learn HTML/CSS and JavaScript, using Codepen. Used jQuery, AJAX and Firebase as backend.
+            </div>
+          </div>
+
+          <div class="section-text">
+            <h1 class="section-subheading">CALENDAR APPLICATION <span class="h4-size">(CS 151: Object-Oriented Design) | April 2017</span></h1>
+            <div class="description">
+              Designed and implemented a calendar similar to Google Calendar. Used Model-View-Controller design pattern, Java Swing and GUI programming skills.
+            </div>
+          </div>
+
+          <div class="section-text">
+            <h1 class="section-subheading">MANCALA GAME <span class="h4-size">(CS 151: Object-Oriented Design)	| April 2017</span></h1>
+            <div class="description">
+              Collaborated with a team of 3 to design and implement Mancala board game in Java Swing. Focused on the model component of Model-View-Controller pattern.
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+      <div class="row section-container ">
+        <div class="section-header-container col-4 ">
+          <div class="section-heading ">EXPERIENCE</div>
+        </div>
+        <div class=" section-content-container col-8 ">
+          <div class="section-text">
+            <h1 class="section-subheading">STUDENT TECHNICAL AMBASSADOR<span class="h4-size"> | August 2016<span></h1>
+            <h2 class="place">Information Technology Services, San José State University</h2>
+          </div>
+          <div class="section-text description" style="padding-top: 20px">
+            Worked with a team of 3 to help redesign the Information Services Technology website. Conducted user interviews, created prototypes, performed usability tests and submitted proposals for an improved design based on surveys and research. Successfully completed,
+            following an agile process, taking up leadership in 2 out of 5 sprints.
+          </div>
+        </div>
+      </div>
+
+
+
+      <div class="row section-container">
+        <div class="section-header-container col-4">
+          <div class="section-heading">ACCOMPLISHMENTS</div>
+        </div>
+        <div class="section-content-container col-8">
+          <div class="section-text">
+            Self-learned HTML/CSS, JavaScript, jQuery, AJAX, Python.<br>Won the Employer’s choice award for working with a team to help Information Technology Services (SJSU) redesign their website.
+          </div>
+        </div>
+      </div>
+
+      <div class="row button-container">
+        <a href="Resume.pdf" download="Joanitha-Resume" target="_blank">
+          <div class="button resume-button">Download Resume</div>
+        </a>
+      </div>
+      <div class="footer-resume">
+        <div class="footer-link"> <a href="https://www.linkedin.com/in/joanitha-christle-gomez">https://www.linkedin.com/in/joanitha-christle-gomez</a></div>
+        <div class="footer-link"><a href="#">joanitha.gomez@sjsu.edu</a></div>
+      </div>
+
+      <!-- sub-container -->
+    </div>
     <!-- container -->
   </div>
 </body>
