--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <li class="home "><a href="#home">home</a></li>
         <li class="work "><a href="#work">work</a></li>
         <li class="say-hello "><a href="#contact">contact</a></li>
-        <li class="resume-page"><a href="file:///Users/jo/portfolio/page/resume-page.html">résumé</a></li>
+        <li class="resume-page"><a href="/resume-page.html">résumé</a></li>
       </div>
 
     </div>
@@ -163,7 +163,7 @@
           </h4>
         </div>
         <div class="row links ">
-          <a class =" heading-font " href="file:///Users/jo/portfolio/page/resume-page.html ">résumé</a>
+          <a class =" heading-font " href="/resume-page.html ">résumé</a>
           <a class=" heading-font " href="mailto:joanitha.gomez@sjsu.edu ">email</a>
           <a class =" heading-font " target="github " href="https://github.com/joanithagomez ">github</a>
           <a class =" heading-font "  target="linkedin " href="https://www.linkedin.com/in/joanitha-christle-gomez ">linkedin</a>
