Navigation fixed and improved responsiveness

--- a/index.html
+++ b/index.html
@@ -14,9 +14,30 @@
 </head>
 
 <body>
+
   <div class="container">
-    <div class="nav-icon">
-      <svg width="48px" height="25px" viewBox="0 0 48 25" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <div class="col-12 side-bar">
+      <!--
+      <div class="logo">
+        <img src="favicon.png">
+      </div> -->
+      <div class="nav-icon">
+        <svg viewBox="0 0 57 28" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <!-- Generator: Sketch 45.2 (43514) - http://www.bohemiancoding.com/sketch -->
+    <desc>Created with Sketch.</desc>
+    <defs></defs>
+    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" stroke-linecap="square">
+        <g id="resume-page" transform="translate(-1304.000000, -74.000000)" stroke="#979797" stroke-width="3">
+            <path d="M1306,75.5 L1359,75.5" id="Line"></path>
+            <path d="M1306,87.5 L1359,87.5" id="Line"></path>
+            <path d="M1306,100.5 L1359,100.5" id="Line"></path>
+        </g>
+    </g>
+</svg>
+      </div>
+      <!--
+      <div class="nav-icon">
+        <svg viewBox="0 0 48 25" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               <g id="Desktop-HD-Copy" transform="translate(-1341.000000, -55.000000)" stroke="#627077" stroke-width="3">
                   <g id="Group-2" transform="translate(1343.000000, 55.000000)">
                       <path d="M0,1.5 L43.9465743,1.5" id="Line1"></path>
@@ -25,18 +46,19 @@
                   </g>
               </g>
       </svg>
-
+      </div>-->
 
     </div>
 
-    <div class="menu-overlay">
-      <div class="menu-items">
-        <li class="home "><a href="#home">home</a></li>
-        <li class="work "><a href="#work">work</a></li>
-        <li class="say-hello "><a href="#contact">contact</a></li>
-        <li class="resume-page"><a href="file:///Users/jo/portfolio/page/resume-page.html">résumé</a></li>
+    <div class="menu">
+      <div class="menu-overlay">
+        <div class="menu-items">
+          <li class="home "><a href="#home">home</a></li>
+          <li class="work "><a href="#work">work</a></li>
+          <li class="say-hello "><a href="#contact">contact</a></li>
+          <li class="resume-page"><a href="/resume-page.html">résumé</a></li>
+        </div>
       </div>
-
     </div>
 
     <div class="home-page">
@@ -94,7 +116,8 @@
       <div class="row work02 ">
         <div class="number two heading-font ">02</div>
 
-        <div class="col-3 "></div>
+        <div class="col-3">
+        </div>
         <div class="col-9 ">
           <h2 class="work-title heading-font ">CALENDAR APPLICATION<h2>
               <h3 class="work-title work-place heading-font ">Course: Object-Oriented Design<h3>
@@ -103,12 +126,13 @@
 
           <div class="row description ">
             <div class="col-3 "></div>
-            <div class="col-9 ">
+            <div class="col-9">
               <p class="work-description ">As a part of my course, I designed and<br> implemented a calendar that is similar to<br> Google Calendar.
-
               </p>
               <p class="footer work-description ">Used: Model-View-Controller pattern, GUI<br>  programming skills and Java</p>
             </div>
+
+
           </div>
 
           <div class="row work03 ">
@@ -163,7 +187,7 @@
           </h4>
         </div>
         <div class="row links ">
-          <a class =" heading-font " href="file:///Users/jo/portfolio/page/resume-page.html ">résumé</a>
+          <a class =" heading-font " href="/resume-page.html ">résumé</a>
           <a class=" heading-font " href="mailto:joanitha.gomez@sjsu.edu ">email</a>
           <a class =" heading-font " target="github " href="https://github.com/joanithagomez ">github</a>
           <a class =" heading-font "  target="linkedin " href="https://www.linkedin.com/in/joanitha-christle-gomez ">linkedin</a>
