--- a/resume-page.html
+++ b/resume-page.html
@@ -16,32 +16,33 @@
   <div class="container">
 
     <div class="nav-icon">
-      <svg width="48px" height="25px" viewBox="0 0 48 25" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-              <g id="Desktop-HD-Copy" transform="translate(-1341.000000, -55.000000)" stroke="#627077" stroke-width="3">
-                  <g id="Group-2" transform="translate(1343.000000, 55.000000)">
-                      <path d="M0,1.5 L43.9465743,1.5" id="Line1"></path>
-                      <path d="M0,12.5 L43.9465743,12.5" id="Line2"></path>
-                      <path d="M0,23.5 L43.9465743,23.5" id="Line3"></path>
-                  </g>
-              </g>
+      <svg viewBox="0 0 57 28" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" stroke-linecap="square">
+          <g id="resume-page" transform="translate(-1304.000000, -74.000000)" stroke="#979797" stroke-width="3">
+            <path d="M1306,75.5 L1359,75.5" id="Line"></path>
+            <path d="M1306,87.5 L1359,87.5" id="Line"></path>
+            <path d="M1306,100.5 L1359,100.5" id="Line"></path>
+          </g>
+        </g>
       </svg>
-
     </div>
 
-
-    <div class="menu-overlay">
-      <div class="menu-items">
-        <li class="home"><a href="file:///Users/jo/portfolio/page/mypage.html#home">home</a></li>
-        <li class="work"><a href="file:///Users/jo/portfolio/page/mypage.html#work">work</a></li>
-        <li class="say-hello"><a href="file:///Users/jo/portfolio/page/mypage.html#contact">contact</a></li>
+    <div class="menu">
+      <div class="menu-overlay">
+        <div class="menu-items">
+          <li class="home"><a href="#home">home</a></li>
+          <li class="work"><a href="https://joanithagomez.github.io/#work">work</a></li>
+          <li class="say-hello"><a href="/index.html#contact">contact</a></li>
+        </div>
       </div>
     </div>
+
 
     <div class="row title-banner">
       <div class="col-5 headshot-container">
         <img class="headshot-resume" src="images/headshot.jpeg" alt="Joanitha's headshot">
       </div>
-      <div class="col-9 heading-container">
+      <div class="col-7 heading-container">
 
         <div class="heading-text-container">
           <h1 class="resume-heading heading-font">JOANITHA</h1>
@@ -69,7 +70,7 @@
           <div class="section-heading">EDUCATION</div>
         </div>
         <div class="section-content-container col-8">
-          <div class="section-text">B.S in Computer Science; Expected Fall 2018<br> San José State University, CA<br>GPA: 3.5/ 4.0
+          <div class="section-text">B.S in Computer Science; Expected Fall 2018<br> San José State University, CA <br>GPA: 3.5/ 4.0
           </div>
           <div class="section-text" style="padding-top: 20px">Design 101,<br> Designlab, <br> June 2017
           </div>
@@ -83,7 +84,7 @@
         </div>
         <div class="section-content-container col-8">
           <div class="section-text section-subheading">Technologies:</div>
-          <div class="section-text">HTML, CSS, JavaScript, jQuery. Java, C++, Python, Firebase, Ajax. Bootstrap.</div>
+          <div class="section-text">HTML, CSS, JavaScript, jQuery, Java, C++, Python, Firebase, Ajax, Bootstrap.</div>
 
           <div class="section-text section-subheading">Tools:</div>
           <div class="section-text">Sketch, GitHub, Eclipse, Codepen, Atom, Slack, Trello.
@@ -98,7 +99,7 @@
           <div class="section-heading">COURSEWORK</div>
         </div>
         <div class="section-content-container col-8">
-          <div class="section-text">Data Structures and Algorithms<br>Object-Oriented Design<br>Introduction to x86 Processor Assembly Language & Computer Architecture and<br>Discrete Mathematics
+          <div class="section-text">Data Structures and Algorithms<br> Object-Oriented Design <br>Introduction to x86 Processor Assembly Language & Computer Architecture <br>and Discrete Mathematics
           </div>
         </div>
       </div>
@@ -159,7 +160,7 @@
         </div>
         <div class="section-content-container col-8">
           <div class="section-text">
-            Self-learned HTML/CSS, JavaScript, jQuery, AJAX, Python.<br>Won the Employer’s choice award for working with a team to help Information Technology Services (SJSU) redesign their website.
+            Self-learned HTML/CSS, JavaScript, jQuery, AJAX, Python.<br> Won the Employer’s choice award for working with a team to help Information Technology Services (SJSU) redesign their website.
           </div>
         </div>
       </div>
