--- a/resume-page.html
+++ b/resume-page.html
@@ -30,8 +30,8 @@
     <div class="menu">
       <div class="menu-overlay">
         <div class="menu-items">
-          <li class="home"><a href="#home">home</a></li>
-          <li class="work"><a href="https://joanithagomez.github.io/#work">work</a></li>
+          <li class="home"><a href="/index.html#home">home</a></li>
+          <li class="work"><a href="/index.html#work">work</a></li>
           <li class="say-hello"><a href="/index.html#contact">contact</a></li>
         </div>
       </div>
